Change bash create template format

--- a/storage/format/template/src/config.json
+++ b/storage/format/template/src/config.json
@@ -2,6 +2,7 @@
     "name": "Template name",
     "image": "images/logo.jpg",
     "auth": "Your name",
+    "configKey": "Template_Key",
     "email": "Your-email@email.com",
     "website": "http://Your-link.com",
     "version": "1.0.0"
