--- a/.env.example
+++ b/.env.example
@@ -43,11 +43,14 @@ ADMIN_PREFIX=sc_admin
 
 FILESYSTEM_DRIVER=public
 
+MAIL_MAILER=
 MAIL_HOST=
 MAIL_PORT=
-MAIL_ENCRYPTION=
 MAIL_USERNAME=
 MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME="${APP_NAME}"
 
 #Use send notice
 LOG_SLACK_WEBHOOK_URL=
