--- a/composer.json
+++ b/composer.json
@@ -12,26 +12,27 @@
     ],
     "type" : "project",
     "require": {
-        "php": "^7.2",
+        "php": "^7.2.5",
         "aws/aws-sdk-php": "^3.0",
-        "fideloper/proxy": "^4.0",
+        "fideloper/proxy": "^4.2",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^6.2",
+        "laravel/framework": "^7.0",
         "laravel/helpers": "^1.1",
         "laravel/passport": "^8.4",
-        "laravel/tinker": "^1.0",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "2.0",
         "paypal/rest-api-sdk-php": "^1.13",
         "phpoffice/phpspreadsheet": "^1.8",
         "spatie/laravel-json-api-paginate": "^1.7",
         "spatie/laravel-pjax": "^2.0",
-        "unisharp/laravel-filemanager": "dev-master"
+        "unisharp/laravel-filemanager": "^2.0"
     },
     "require-dev": {
-        "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0",
+        "facade/ignition": "^2.0",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5",
         "barryvdh/laravel-debugbar": "^3.2",
         "filp/whoops": "^2.0"
     },
@@ -60,11 +61,11 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate"
+            "@php artisan key:generate --ansi"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover"
+            "@php artisan package:discover --ansi"
         ]
     },
 
