--- a/resources/views/templates/default-new/config.json
+++ b/resources/views/templates/default-new/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "S-Cart default new",
+    "name": "SCart default new",
     "image": "images/scart-min.png",
     "auth": "Sesshomaru",
     "email": "ntrong0603.dgt@gmail.com",
