process mail queue

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,8 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
+QUEUE_DRIVER=database
+
 #Use send notice
 LOG_SLACK_WEBHOOK_URL=
 #Prefix for table database
