--- a/storage/format/template/src/config.json
+++ b/storage/format/template/src/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Template name",
+    "name": "Template format for S-Cart 3.0",
     "image": "images/logo.jpg",
     "auth": "Your name",
     "configKey": "Template_Key",
