--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,15 @@ LOG_SLACK_WEBHOOK_URL=
 #Prefix for table database
 DB_PREFIX=sc_
 SC_API_LINK=https://api.s-cart.org/v2
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REDIRECT=
+
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+FACEBOOK_APP_CALLBACK_URL=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT=
