--- a/resources/views/templates/s-cart-light/config.json
+++ b/resources/views/templates/s-cart-light/config.json
@@ -1,9 +1,9 @@
 {
-    "name": "S-Cart 3x",
+    "name": "S-Cart Light",
     "image": "images/scart-min.png",
     "auth": "Naruto",
     "email": "lanhktc@gmail.com",
     "website": "https://S-Cart.Org",
-    "configKey": "s-cart-3x",
-    "version": "1.2"
+    "configKey": "s-cart-light",
+    "version": "4.0"
 }
