--- a/storage/format/template/src/config.json
+++ b/storage/format/template/src/config.json
@@ -1,5 +1,5 @@
 {
-    "name": "Template format for S-Cart 3.0",
+    "name": "Template format for S-Cart from 4.0",
     "image": "images/logo.jpg",
     "auth": "Your name",
     "email": "Your-email@email.com",
