--- a/app/Plugins/Cms/Content/config.json
+++ b/app/Plugins/Cms/Content/config.json
@@ -1,7 +1,7 @@
 {
     "name": "Cms content module",
     "image": "images/logo.jpg",
-    "auth": "Naruto",
+    "auth": "Lanh Le",
     "email": "lanhktc@gmail.com",
     "link": "https://S-Cart.Org",
     "configGroup": "Plugins",
