--- a/app/Plugins/Shipping/ShippingStandard/config.json
+++ b/app/Plugins/Shipping/ShippingStandard/config.json
@@ -1,7 +1,7 @@
 {
     "name": "Shipping standard",
     "image": "",
-    "auth": "Naruto",
+    "auth": "Lanh Le",
     "email": "lanhktc@gmail.com",
     "link": "https://S-Cart.Org",
     "configGroup": "Plugins",
