Update code process store discount

--- a/resources/views/templates/s-cart-light/config.json
+++ b/resources/views/templates/s-cart-light/config.json
@@ -2,8 +2,8 @@
     "name": "S-Cart Light",
     "image": "images/scart-min.png",
     "auth": "S-Cart",
-    "email": "lanhktc@gmail.com",
+    "email": "support@s-cart.org",
     "website": "https://S-Cart.Org",
     "configKey": "s-cart-light",
-    "version": "6.3"
+    "version": "6.4"
 }
