--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,9 @@
         "php": "^7.4|^8.0",
         "aws/aws-sdk-php": "^3.0",
         "barryvdh/laravel-dompdf": "^0.9.0",
-        "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^8.54",
         "laravel/helpers": "^1.4",
         "laravel/legacy-factories": "^1.1",
         "laravel/passport": "^10.1",
@@ -29,10 +28,12 @@
     },
     "require-dev": {
         "facade/ignition": "^2.5",
+        "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "barryvdh/laravel-debugbar": "^3.5"
+        "barryvdh/laravel-debugbar": "^3.5",
+        "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "psr-4": {
@@ -46,16 +47,13 @@
             "Tests\\": "tests/"
         }
     },
-    "extra": {
-        "laravel": {
-            "dont-discover": [
-            ]
-        }
-    },
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
@@ -64,12 +62,16 @@
             "@php artisan key:generate --ansi"
         ]
     },
-
+    "extra": {
+        "laravel": {
+            "dont-discover": [
+            ]
+        }
+    },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true,
-        "platform-check": false
+        "sort-packages": true
     },
     "minimum-stability": "dev",
     "prefer-stable": true
