--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "type" : "project",
     "require": {
-        "s-cart/core": "7.x-dev"
+        "s-cart/core": "~7.0.0"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^1.0",
