--- a/.env.example
+++ b/.env.example
@@ -87,5 +87,42 @@ GOOGLE_REDIRECT=
 #Path mysql bin 
 PATH_MYSQL_BIN=
 
+
+#====Variable of SC===
+
 #Support off ecommerce from front-end
 SC_ECOMMERCE_MODE=1
+
+#Plugin
+SC_ADMIN_API_PLUGIN=1
+SC_ADMIN_API_TEMPLATE=1
+SC_ADMIN_LOG=1
+
+#Api
+SC_API_RECOMMEMBER=30 #days
+SC_API_TOKEN_EXPIRE_DEFAULT=7 #days
+SC_API_RECOMMEMBER_ADMIN=30 #days
+SC_API_TOKEN_EXPIRE_ADMIN_DEFAULT=7 #days
+SC_API_SCOPE_TYPE=ability
+SC_API_SCOPE_TYPE_ADMIN=ability
+SC_API_SCOPE_USER=user
+SC_API_SCOPE_USER_GUEST="user-guest"
+SC_API_SCOPE_ADMIN="admin-supper"
+
+#Cart
+SC_CART_EXPIRE_CART=7 #days
+SC_CART_EXPIRE_WISHLIST=30 #days
+SC_CART_EXPIRE_COMPARE=30 #days
+
+#Other fee
+SC_PROCESS_OTHER_FEE=0
+SC_PROCESS_OTHER_TITLE="Other fee"
+
+#Upload
+SC_UPLOAD_DISK="uploads"
+SC_UPLOAD_THUMB_STATUS=false
+SC_UPLOAD_OVER_WRITE_DUPLICATE=false
+SC_UPLOAD_THUMB_FOLDER="thumbs"
+SC_UPLOAD_THUMB_WIDTH=200 #px
+SC_UPLOAD_THUMB_HEIGHT=200 #px
+#==//End======
