--- a/app/Plugins/Cms/Content/config.json
+++ b/app/Plugins/Cms/Content/config.json
@@ -7,5 +7,6 @@
     "configGroup": "Plugins",
     "configCode": "Cms",
     "configKey": "Content",
-    "version": "5.3"
+    "version": "5.4",
+    "scartVersion": "7.1|7.2"
 }
