--- a/app/Plugins/Other/GoogleCaptcha/config.json
+++ b/app/Plugins/Other/GoogleCaptcha/config.json
@@ -7,5 +7,6 @@
     "configGroup": "Plugins",
     "configCode": "Other",
     "configKey": "GoogleCaptcha",
-    "version": "1.1"
+    "version": "1.2",
+    "scartVersion": "7.1|7.2"
 }
