--- a/app/Plugins/Shipping/ShippingStandard/config.json
+++ b/app/Plugins/Shipping/ShippingStandard/config.json
@@ -7,5 +7,6 @@
     "configGroup": "Plugins",
     "configCode": "Shipping",
     "configKey": "ShippingStandard",
-    "version": "1.2"
+    "version": "1.3",
+    "scartVersion": "7.1|7.2"
 }
