--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "type" : "project",
     "require": {
-        "s-cart/core": "dev-8-dev"
+        "s-cart/core": "dev-master"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
