--- a/app/Plugins/Other/GoogleCaptcha/config.json
+++ b/app/Plugins/Other/GoogleCaptcha/config.json
@@ -8,5 +8,5 @@
     "configCode": "Other",
     "configKey": "GoogleCaptcha",
     "version": "1.3",
-    "scartVersion": "8.0"
+    "scartVersion": "8.0|8.1|8.2"
 }
