Add config for productsLastView

--- a/.env.example
+++ b/.env.example
@@ -113,6 +113,7 @@ SC_API_SCOPE_ADMIN="admin-supper"
 SC_CART_EXPIRE_CART=7 #days
 SC_CART_EXPIRE_WISHLIST=30 #days
 SC_CART_EXPIRE_COMPARE=30 #days
+SC_CART_EXPIRE_PRODUCT_LASTVIEW=30 #days
 
 #Other fee
 SC_PROCESS_OTHER_FEE=0
