Add variabe env for search mode

--- a/.env.example
+++ b/.env.example
@@ -92,6 +92,8 @@ PATH_MYSQL_BIN=
 
 #Support off ecommerce from front-end
 SC_ECOMMERCE_MODE=1
+#Data search result from page search
+SC_SEARCH_MODE=PRODUCT
 
 #Plugin
 SC_ADMIN_API_PLUGIN=1
